# LocalDoc-GraphRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  GITIGNORE_SNIPPET.txt  MANIFEST.sha256  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-extended.txt  requirements.txt  run.sh  streamlit_app.py
config/: immigration_sources.json
scripts/: bootstrap_local.sh  bootstrap_windows.ps1  download_immigration_sources.py  enable_fast_mode.py  refresh_immigration_data.sh  run_ui.py  verify_sample.sh
src/enterprise_graphrag/: __init__.py  agent.py  cli.py  config.py  evaluation.py  graph_store.py  ingestion.py  llm.py  main.py  models.py  retriever.py  ui_cache.py
